# space-game

./: .gitignore  AGENTS.md  pyproject.toml  run_game.py  test_basic.py
docs/: PLAN.md
src/: bullet.py  constants.py  enemies.py  game.py  game_state.py  main.py  player.py
tests/: test_collision_logic.py  test_component_simple.py
