[tool.poetry]
name = "space-invaders-game"
version = "0.1.0"
description = "Retro Space Invaders-style arcade game"
authors = ["You <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
mypy = "^1.5.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = '.git|venv|.venv|__pycache__'

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = false

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
